--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
   margin:0;
   padding:0;
-  font-family: 'helvetica';
+  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -16,9 +16,15 @@
 .bgtest2{
 	background-color: #FDFDFD;
 	height: 30em;
-	padding: 1.5em 1.5em 1.5em 1.5em;
-
+	padding: 10vw 10vw 1vw 10vw;
+	
+	text-align: center;
 		
+}
+
+.aboutpara{
+	line-height: 1.5;
+	font-size: 1.5em;
 }
 
 .title{
@@ -47,7 +53,7 @@
 .bgtest3{
 	background-color: #FFF9E6;
 	width: 100%;
-	height: 30em;
+	overflow: auto;
 	clip-path: polygon(
 		0 6vw,
 		100% 0,
@@ -55,9 +61,11 @@
 		0 calc(100% - 6vw)
 		);
 	margin-top: -6vw;
-	padding-top: 15vw;
-	padding-left: 1em;
+	padding-top: 20vw;
+	
 	box-sizing: border-box;
+	padding-bottom: 50%;
+	text-align: center;
 
 
 }
@@ -68,6 +76,28 @@
 	background-color: #133F70;
 	height: 25em;
 	width: 100%;
-	padding-left: 1em;
+	padding-left: 1.5em;
+	padding-right: 1.5em;
 	box-sizing: border-box;
+	color: #FDFDFD;
+	font-size: 0.8em;
+}
+
+.footerflex{
+	display:flex;
+	justify-content: space-between;
+}
+
+.hourflex{
+	display:flex;
+	justify-content: space-between;
+}
+
+.foodlist{
+	text-align: center;
+	font-size: 1.5em;
+}
+
+.foodbadge{
+	width: 10em;
 }
