--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 
 .bgtest{
-	background-image:URL('image.jpg');
-	height: 20em;
+	background-image:URL('Plano.jpg');
+	height: 80vh;
 	background-attachment: fixed;
 
 }
@@ -28,8 +28,30 @@
 }
 
 .title{
-	text-align: center;
-	padding-top: 4em;
+	padding-top: 9em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+}
+
+.titleimg{
+	width: 12em;
+}
+
+.logo{
+	font-size: 2em;
+}
+
+ul{
+	list-style:none;
+	padding-top:1.5em;
+}
+
+a{
+	text-decoration: none;
+}
+a:visited{
 	color: #FDFDFD;
 }
 
@@ -44,6 +66,11 @@
 
 .right-nav{
 	padding-right: 1em;
+	font-size: 1.3em;
+}
+
+.navlink{
+	padding-top: 0.2em;
 }
 
 .left-nav{
@@ -64,7 +91,7 @@
 	padding-top: 20vw;
 	
 	box-sizing: border-box;
-	padding-bottom: 50%;
+	padding-bottom: 20vh;
 	text-align: center;
 
 
@@ -101,3 +128,36 @@
 .foodbadge{
 	width: 10em;
 }
+
+
+.footer {
+	
+	display: flex;
+	flex-direction: row;
+	
+	justify-content: flex-start;
+
+	left: 0;
+	bottom: 0;
+	
+	
+	margin-top: 4em;
+	padding-top: 2em;
+	padding-bottom: 6em;
+	padding-left: 7em;
+
+}
+
+.fa {
+    padding: 15px;
+    font-size: 30px;
+    width: 15px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    background-color: #FDFDFD;
+    color: #133F70;
+}
+
+
+
