--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@
 }
 
 
+h1{
+	font-family: 'Permanent Marker', cursive;
+	font-size: 2.2em;
+}
+
+.bgtest4 h1{
+	font-size: 3em;
+}
+
+.bgtest2 h1{
+	font-size: 2em;
+}
 
 .bgtest{
 	background-image:URL('Plano.jpg');
@@ -16,6 +28,10 @@
 					100% 0, 
 					0 0);
 
+}
+
+.logo{
+	width: 75px;
 }
 
 .bgtest2{
@@ -62,6 +78,7 @@ ul{
 
 .headlink{
 	text-decoration: none;
+	
 }
 .headlink:visited{
 	color: #FDFDFD;
@@ -191,10 +208,13 @@ ul{
 .foodlist{
 	text-align: center;
 	font-size: 1.5em;
+	
 }
 
 .foodlist p{
-	font-size: 0.9em;
+	font-size: 1.2em;
+
+	font-family: 'Bangers', cursive;
 }
 
 .foodbadge{
